// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index Page Container should map dispatch to props correctly 1`] = `
Object {
  "addClick": [Function],
}
`;

exports[`Index Page Container should map state to props correctly 1`] = `
Object {
  "appClicks": 10,
}
`;

exports[`Index Page UI should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UI
    addClick={[Function]}
    appClicks={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "background": "#fff",
      "children": Array [
        <h1>
          Welcome to Rapture
        </h1>,
        <p>
          Number of Clicks is 
          0
        </p>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Welcome to Rapture",
        },
        "ref": null,
        "rendered": "Welcome to Rapture",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Number of Clicks is ",
            0,
          ],
        },
        "ref": null,
        "rendered": Array [
          "Number of Clicks is ",
          0,
        ],
        "type": "p",
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "background": "#fff",
        "children": Array [
          <h1>
            Welcome to Rapture
          </h1>,
          <p>
            Number of Clicks is 
            0
          </p>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Welcome to Rapture",
          },
          "ref": null,
          "rendered": "Welcome to Rapture",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Number of Clicks is ",
              0,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Number of Clicks is ",
            0,
          ],
          "type": "p",
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
